--- a/BitCoinPred.ipynb
+++ b/BitCoinPred.ipynb
@@ -3,41 +3,54 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pyspark as spark\n",
-    "sc = spark.SparkContext()"
+    "import pandas as pd\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "from pyspark.sql.types import *\n",
+    "from pyspark.sql import SQLContext\n",
+    "from pyspark.sql.functions import col,udf,monotonically_increasing_id\n",
+    "import re\n",
+    "sc = spark.SparkContext()\n",
+    "sql = spark.SQLContext(sc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Skipping line 845142: unexpected end of data\n"
+     ]
+    }
+   ],
    "source": [
-    "sql = spark.SQLContext(sc)\n",
-    "FullDataTw = (sql.read\n",
-    "            .format(\"com.databricks.spark.csv\")\n",
-    "            .option(\"header\", \"false\")\n",
-    "            .load('/Users/harishpuvvada/Desktop/PBDA/IPynb Spark/tweetsfinal.csv'))  #Loading Twitter dataset\n",
-    "FullDataBtc = (sql.read\n",
-    "            .format(\"com.databricks.spark.csv\")\n",
-    "            .option(\"header\", \"True\")\n",
-    "            .load('/Users/harishpuvvada/Desktop/PBDA/IPynb Spark/BitCoinPrice.csv'))  #Loading BitCoin Price dataset"
+    "df1=pd.read_csv('/Users/harishpuvvada/Desktop/PBDA/IPynb Spark/tweetsfinal.csv',error_bad_lines=False,engine = 'python',header = None) \n",
+    "df2=pd.read_csv('/Users/harishpuvvada/Desktop/PBDA/IPynb Spark/BitCoinPrice.csv',error_bad_lines=False,engine = 'python',header = None) \n",
+    "FullDataTw=sql.createDataFrame(df1)\n",
+    "FullDataBtc=sql.createDataFrame(df2) #creating pandas df and then changing it to pyspark df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "859481\n",
-      "216\n"
+      "845141\n",
+      "217\n"
      ]
     }
    ],
@@ -50,98 +63,253 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "FullDataTw = FullDataTw.withColumnRenamed('_c0', 'DateTime') #setting column names of Twitter dataset\n",
-    "FullDataTw = FullDataTw.withColumnRenamed('_c1', 'Tweet')"
+    "FullDataTw.select(monotonically_increasing_id().alias(\"rowId\"),\"*\")\n",
+    "FullDataTw = FullDataTw.withColumnRenamed('0', 'DateTime') #setting column names of Twitter dataset\n",
+    "FullDataTw = FullDataTw.withColumnRenamed('1', 'Tweet')\n",
+    "FullDataBtc = FullDataBtc.withColumnRenamed('0', 'DateTime') #setting column names of Bitcoin price dataset\n",
+    "FullDataBtc = FullDataBtc.withColumnRenamed('1', 'Price')\n",
+    "FullDataBtc = FullDataBtc.filter(FullDataBtc.DateTime != 'Date') #to get rid of first row with the header"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "100"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "Tw_samp = FullDataTw.limit(100)\n",
-    "df_samp.count()"
+    "Tw_samp = FullDataTw.limit(50) #taking sample of 50 rows and working on it"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+--------------+-----------+\n",
-      "|          Date|Close Price|\n",
-      "+--------------+-----------+\n",
-      "| 10/31/17 0:00|    6142.46|\n",
-      "| 10/31/17 1:00|    6139.47|\n",
-      "| 10/31/17 2:00|     6128.2|\n",
-      "| 10/31/17 3:00|    6130.72|\n",
-      "| 10/31/17 4:00|    6143.92|\n",
-      "| 10/31/17 5:00|    6158.76|\n",
-      "| 10/31/17 6:00|     6105.9|\n",
-      "| 10/31/17 7:00|    6094.36|\n",
-      "| 10/31/17 8:00|    6125.13|\n",
-      "| 10/31/17 9:00|       6165|\n",
-      "|10/31/17 10:00|    6170.77|\n",
-      "|10/31/17 11:00|    6233.74|\n",
-      "|10/31/17 12:00|    6201.03|\n",
-      "|10/31/17 13:00|    6332.34|\n",
-      "|10/31/17 14:00|    6363.13|\n",
-      "|10/31/17 15:00|    6365.16|\n",
-      "|10/31/17 16:00|    6364.78|\n",
-      "|10/31/17 17:00|    6361.79|\n",
-      "|10/31/17 18:00|    6335.64|\n",
-      "|10/31/17 19:00|    6341.15|\n",
-      "+--------------+-----------+\n",
-      "only showing top 20 rows\n",
+      "+--------------------+--------------------+--------------------+\n",
+      "|            DateTime|               Tweet|       CleanedTweets|\n",
+      "+--------------------+--------------------+--------------------+\n",
+      "|Thu Nov 09 17:43:...|RT @Forbes: The F...|The Failure of Se...|\n",
+      "|Thu Nov 09 17:43:...|RT @mindstatex: L...|Lots of love from...|\n",
+      "|Thu Nov 09 17:43:...|RT @FernandoHuama...|Warning Built in ...|\n",
+      "|Thu Nov 09 17:43:...|RT @LevelNetwork:...|Join our telegram...|\n",
+      "|Thu Nov 09 17:43:...|RT @realsheepwolf...|DIGAF FLOAT 16M T...|\n",
+      "+--------------------+--------------------+--------------------+\n",
+      "only showing top 5 rows\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "FullDataBtc.show()"
+    "import preprocessor as p #cleaning each tweet using tweet-preprocessor like removing hashtags,urls,emojis....\n",
+    "def function_udf(input_str):\n",
+    "    input_str = re.sub(r'RT', '', input_str)\n",
+    "    p.set_options(p.OPT.URL, p.OPT.EMOJI,p.OPT.MENTION)\n",
+    "    input_str = p.clean(input_str)\n",
+    "    return ' '.join(re.sub(\"(@[A-Za-z0-9]+)|([^0-9A-Za-z \\t])|(\\w+:\\/\\/\\S+)\", \" \", input_str).split())\n",
+    "func_udf = udf(function_udf, StringType())\n",
+    "CleanDF = Tw_samp.withColumn('CleanedTweets', func_udf(Tw_samp['Tweet']))\n",
+    "CleanDF.show(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+--------------------+--------------------+---------------+\n",
+      "|            DateTime|               Tweet|       CleanedTweets|Sentiment_score|\n",
+      "+--------------------+--------------------+--------------------+---------------+\n",
+      "|Thu Nov 09 17:43:...|RT @Forbes: The F...|The Failure of Se...|    -0.18888889|\n",
+      "|Thu Nov 09 17:43:...|RT @mindstatex: L...|Lots of love from...|     0.25833333|\n",
+      "|Thu Nov 09 17:43:...|RT @FernandoHuama...|Warning Built in ...|            0.0|\n",
+      "|Thu Nov 09 17:43:...|RT @LevelNetwork:...|Join our telegram...|            0.0|\n",
+      "|Thu Nov 09 17:43:...|RT @realsheepwolf...|DIGAF FLOAT 16M T...|          -0.05|\n",
+      "+--------------------+--------------------+--------------------+---------------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from textblob import TextBlob  #passing cleaned tweets and getting a sentiment score for each tweet\n",
+    "def senti_score_udf(input_str):\n",
+    "    analysis = TextBlob(input_str)\n",
+    "    return analysis.sentiment.polarity\n",
+    "func_udf2 = udf(senti_score_udf, FloatType())\n",
+    "CleanDF = CleanDF.withColumn('Sentiment_score', func_udf2(CleanDF['CleanedTweets']))\n",
+    "CleanDF.show(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+--------------------+--------------------+---------------+-------------------+-------------------+\n",
+      "|            DateTime|               Tweet|       CleanedTweets|Sentiment_score|         DateTime_c|    DateTime_casted|\n",
+      "+--------------------+--------------------+--------------------+---------------+-------------------+-------------------+\n",
+      "|Thu Nov 09 17:43:...|RT @Forbes: The F...|The Failure of Se...|    -0.18888889|2017-11-09 17:43:41|2017-11-09 17:43:41|\n",
+      "|Thu Nov 09 17:43:...|RT @mindstatex: L...|Lots of love from...|     0.25833333|2017-11-09 17:43:40|2017-11-09 17:43:40|\n",
+      "|Thu Nov 09 17:43:...|RT @FernandoHuama...|Warning Built in ...|            0.0|2017-11-09 17:43:39|2017-11-09 17:43:39|\n",
+      "|Thu Nov 09 17:43:...|RT @LevelNetwork:...|Join our telegram...|            0.0|2017-11-09 17:43:39|2017-11-09 17:43:39|\n",
+      "|Thu Nov 09 17:43:...|RT @realsheepwolf...|DIGAF FLOAT 16M T...|          -0.05|2017-11-09 17:43:39|2017-11-09 17:43:39|\n",
+      "+--------------------+--------------------+--------------------+---------------+-------------------+-------------------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def Tw_Time_format(stri):  #manipulating and casting the strings(DateTime) of tweets dataframe to timestamps\n",
+    "    dic = {'Nov':'11','Oct':'10'}\n",
+    "    ans = ''\n",
+    "    ans += stri[-4:]+'-'+ dic[stri[4:7]]+'-'+stri[8:19]\n",
+    "    return ans\n",
+    "func_udf3 = udf(Tw_Time_format,StringType())\n",
+    "CleanDF = CleanDF.withColumn('DateTime_c', func_udf3(CleanDF['DateTime']))\n",
+    "CleanDF = CleanDF.withColumn(\"DateTime_casted\",CleanDF['DateTime_c'].cast(TimestampType()))\n",
+    "CleanDF.show(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------+--------------------+---------------+\n",
+      "|          Date_Time|      Cleaned_Tweets|Sentiment_score|\n",
+      "+-------------------+--------------------+---------------+\n",
+      "|2017-11-09 17:43:41|The Failure of Se...|    -0.18888889|\n",
+      "|2017-11-09 17:43:40|Lots of love from...|     0.25833333|\n",
+      "|2017-11-09 17:43:39|Warning Built in ...|            0.0|\n",
+      "|2017-11-09 17:43:39|Join our telegram...|            0.0|\n",
+      "|2017-11-09 17:43:39|DIGAF FLOAT 16M T...|          -0.05|\n",
+      "+-------------------+--------------------+---------------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "FinalTw = CleanDF.selectExpr(\"DateTime_casted as Date_Time\", \"CleanedTweets as Cleaned_Tweets\",\"Sentiment_score\")\n",
+    "FinalTw.show(5) #selecting necessary columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- Date_Time: timestamp (nullable = true)\n",
+      " |-- Cleaned_Tweets: string (nullable = true)\n",
+      " |-- Sentiment_score: float (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "FinalTw.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def Btc_Time_format(input_str): #manipulating and casting the strings(DateTime) of BTC dataframe to timestamps\n",
+    "    input_str = '2017-'+ input_str\n",
+    "    input_str = re.sub(r'/', '-', input_str)\n",
+    "    input_str += ':00'\n",
+    "    return input_str[:10]+input_str[13:]\n",
+    "func_udf = udf(Btc_Time_format, StringType())\n",
+    "FullDataBtc = FullDataBtc.withColumn('Cleaned_BTC_Time', func_udf(FullDataBtc['DateTime']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------+-------+\n",
+      "|          Date_Time|  Price|\n",
+      "+-------------------+-------+\n",
+      "|2017-10-31 00:00:00|6142.46|\n",
+      "|2017-10-31 01:00:00|6139.47|\n",
+      "|2017-10-31 02:00:00| 6128.2|\n",
+      "|2017-10-31 03:00:00|6130.72|\n",
+      "|2017-10-31 04:00:00|6143.92|\n",
+      "+-------------------+-------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "CleandfBtc = FullDataBtc.withColumn(\"Cleaned_BTC_Time_New\",FullDataBtc['Cleaned_BTC_Time'].cast(TimestampType()))\n",
+    "FinalBtc = CleandfBtc.selectExpr(\"Cleaned_BTC_Time_New as Date_Time\", \"Price\")\n",
+    "FinalBtc = FinalBtc.withColumn(\"Price\",FinalBtc['Price'].cast(DoubleType()))\n",
+    "FinalBtc.show(5)#In this cell, casting to timesstamp, changing col names and casting price type to double"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- Date_Time: timestamp (nullable = true)\n",
+      " |-- Price: double (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "FinalBtc.printSchema()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# dates_df.registerTempTable(\"dates\")\n",
@@ -149,15 +317,6 @@
     "# results = sqlContext.sql(\"SELECT * FROM dates INNER JOIN events ON dates.lower_timestamp < events.time and  events.time < dates.upper_timestamp\")\n",
     "# results.explain()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
