--- a/BitCoinPred.ipynb
+++ b/BitCoinPred.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pyspark as spark\n",
@@ -14,7 +12,7 @@
     "warnings.filterwarnings('ignore')\n",
     "from pyspark.sql.types import *\n",
     "from pyspark.sql import SQLContext\n",
-    "from pyspark.sql.functions import col,udf,monotonically_increasing_id\n",
+    "from pyspark.sql.functions import col,udf,monotonically_increasing_id,unix_timestamp,round\n",
     "import re\n",
     "sc = spark.SparkContext()\n",
     "sql = spark.SQLContext(sc)"
@@ -22,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -78,8 +76,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "Tw_samp = FullDataTw.limit(50) #taking sample of 50 rows and working on it"
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -303,6 +303,55 @@
    "source": [
     "FinalBtc.printSchema()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------+--------------------+---------------+-------------------+\n",
+      "|          Date_Time|      Cleaned_Tweets|Sentiment_score|       dt_truncated|\n",
+      "+-------------------+--------------------+---------------+-------------------+\n",
+      "|2017-11-09 17:43:41|The Failure of Se...|    -0.18888889|2017-11-09 18:00:00|\n",
+      "|2017-11-09 17:43:40|Lots of love from...|     0.25833333|2017-11-09 18:00:00|\n",
+      "|2017-11-09 17:43:39|Warning Built in ...|            0.0|2017-11-09 18:00:00|\n",
+      "|2017-11-09 17:43:39|Join our telegram...|            0.0|2017-11-09 18:00:00|\n",
+      "|2017-11-09 17:43:39|DIGAF FLOAT 16M T...|          -0.05|2017-11-09 18:00:00|\n",
+      "|2017-11-09 17:43:39|My luggage likes ...|            0.0|2017-11-09 18:00:00|\n",
+      "|2017-11-09 17:43:38|As Bitcoin become...|           0.55|2017-11-09 18:00:00|\n",
+      "|2017-11-09 17:43:38|A crucial feature...|            0.1|2017-11-09 18:00:00|\n",
+      "|2017-11-09 17:43:38|As Bitcoin become...|           0.55|2017-11-09 18:00:00|\n",
+      "|2017-11-09 17:43:37|As Bitcoin become...|           0.55|2017-11-09 18:00:00|\n",
+      "+-------------------+--------------------+---------------+-------------------+\n",
+      "only showing top 10 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "dt_truncated = ((round(unix_timestamp(col(\"Date_Time\")) / 3600) * 3600).cast(\"timestamp\"))#rounding all the times to hour\n",
+    "FinalTw.withColumn(\"dt_truncated\", dt_truncated).show(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
