--- a/BitCoinPred.ipynb
+++ b/BitCoinPred.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pyspark as spark\n",
@@ -12,7 +14,7 @@
     "warnings.filterwarnings('ignore')\n",
     "from pyspark.sql.types import *\n",
     "from pyspark.sql import SQLContext\n",
-    "from pyspark.sql.functions import col,udf,monotonically_increasing_id,unix_timestamp,round\n",
+    "from pyspark.sql.functions import col,udf,monotonically_increasing_id,unix_timestamp,round,avg\n",
     "import re\n",
     "sc = spark.SparkContext()\n",
     "sql = spark.SQLContext(sc)"
@@ -82,7 +84,7 @@
    },
    "outputs": [],
    "source": [
-    "Tw_samp = FullDataTw.limit(50) #taking sample of 50 rows and working on it"
+    "Tw_samp = FullDataTw #taking sample of 50 rows and working on it"
    ]
   },
   {
@@ -306,35 +308,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+-------------------+--------------------+---------------+-------------------+\n",
-      "|          Date_Time|      Cleaned_Tweets|Sentiment_score|       dt_truncated|\n",
-      "+-------------------+--------------------+---------------+-------------------+\n",
-      "|2017-11-09 17:43:41|The Failure of Se...|    -0.18888889|2017-11-09 18:00:00|\n",
-      "|2017-11-09 17:43:40|Lots of love from...|     0.25833333|2017-11-09 18:00:00|\n",
-      "|2017-11-09 17:43:39|Warning Built in ...|            0.0|2017-11-09 18:00:00|\n",
-      "|2017-11-09 17:43:39|Join our telegram...|            0.0|2017-11-09 18:00:00|\n",
-      "|2017-11-09 17:43:39|DIGAF FLOAT 16M T...|          -0.05|2017-11-09 18:00:00|\n",
-      "|2017-11-09 17:43:39|My luggage likes ...|            0.0|2017-11-09 18:00:00|\n",
-      "|2017-11-09 17:43:38|As Bitcoin become...|           0.55|2017-11-09 18:00:00|\n",
-      "|2017-11-09 17:43:38|A crucial feature...|            0.1|2017-11-09 18:00:00|\n",
-      "|2017-11-09 17:43:38|As Bitcoin become...|           0.55|2017-11-09 18:00:00|\n",
-      "|2017-11-09 17:43:37|As Bitcoin become...|           0.55|2017-11-09 18:00:00|\n",
-      "+-------------------+--------------------+---------------+-------------------+\n",
+      "+-------------------+--------------------+---------------+\n",
+      "|          Date_Time|      Cleaned_Tweets|Sentiment_score|\n",
+      "+-------------------+--------------------+---------------+\n",
+      "|2017-11-09 23:00:00|The Failure of Se...|    -0.18888889|\n",
+      "|2017-11-09 23:00:00|Lots of love from...|     0.25833333|\n",
+      "|2017-11-09 23:00:00|Warning Built in ...|            0.0|\n",
+      "|2017-11-09 23:00:00|Join our telegram...|            0.0|\n",
+      "|2017-11-09 23:00:00|DIGAF FLOAT 16M T...|          -0.05|\n",
+      "|2017-11-09 23:00:00|My luggage likes ...|            0.0|\n",
+      "|2017-11-09 23:00:00|As Bitcoin become...|           0.55|\n",
+      "|2017-11-09 23:00:00|A crucial feature...|            0.1|\n",
+      "|2017-11-09 23:00:00|As Bitcoin become...|           0.55|\n",
+      "|2017-11-09 23:00:00|As Bitcoin become...|           0.55|\n",
+      "+-------------------+--------------------+---------------+\n",
       "only showing top 10 rows\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "dt_truncated = ((round(unix_timestamp(col(\"Date_Time\")) / 3600) * 3600).cast(\"timestamp\"))#rounding all the times to hour\n",
-    "FinalTw.withColumn(\"dt_truncated\", dt_truncated).show(10)"
+    "dt_truncated = ((round(unix_timestamp(col('Date_Time')) / 3600) * 3600).cast('timestamp'))\n",
+    "FinalTw = FinalTw.withColumn('dt_truncated', dt_truncated)\n",
+    "FinalTw = FinalTw.selectExpr(\"dt_truncated as Date_Time\",\"Cleaned_Tweets\",\"Sentiment_score\")\n",
+    "UTC = ((unix_timestamp(col('Date_Time'))+ 5*60*60).cast('timestamp'))\n",
+    "FinalTw = FinalTw.withColumn('UTC', UTC)\n",
+    "FinalTw = FinalTw.selectExpr(\"UTC as Date_Time\",\"Cleaned_Tweets\",\"Sentiment_score\")\n",
+    "FinalTw.show(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------+--------------------+\n",
+      "|          Date_Time|avg(Sentiment_score)|\n",
+      "+-------------------+--------------------+\n",
+      "|2017-11-09 09:00:00| 0.09240741625240456|\n",
+      "|2017-11-04 14:00:00| 0.11845594881100904|\n",
+      "|2017-11-04 13:00:00|  0.1172484553339806|\n",
+      "|2017-11-02 12:00:00| 0.06527885267149504|\n",
+      "|2017-11-07 23:00:00| 0.10283782658623176|\n",
+      "|2017-11-04 09:00:00| 0.09418897322089734|\n",
+      "|2017-11-02 02:00:00| 0.09436981377657502|\n",
+      "|2017-11-03 03:00:00| 0.09344412833299827|\n",
+      "|2017-11-04 04:00:00| 0.10142201882228671|\n",
+      "|2017-11-05 00:00:00| 0.08632902932326081|\n",
+      "|2017-10-31 17:00:00| 0.09206832917391784|\n",
+      "|2017-11-06 16:00:00| 0.09368665402965974|\n",
+      "|2017-11-03 05:00:00| 0.07860593016294816|\n",
+      "|2017-11-02 21:00:00| 0.08349927669926008|\n",
+      "|2017-11-06 19:00:00| 0.10290178138846101|\n",
+      "|2017-11-02 16:00:00| 0.06061797001144715|\n",
+      "|2017-11-01 05:00:00| 0.11368575691864594|\n",
+      "|2017-10-31 16:00:00| 0.09301943334583278|\n",
+      "|2017-10-31 12:00:00| 0.10549754665746006|\n",
+      "|2017-11-04 19:00:00| 0.09140639081231433|\n",
+      "+-------------------+--------------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "FinalTw_avg = FinalTw.select(\"Date_Time\",\"Sentiment_score\").groupBy(\"Date_Time\").agg(avg(col(\"Sentiment_score\")))\n",
+    "FinalTw_avg.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------+------------------------------------------+\n",
+      "|          Date_Time|concat_ws( , collect_list(Cleaned_Tweets))|\n",
+      "+-------------------+------------------------------------------+\n",
+      "|2017-11-09 09:00:00|                      Segwit2X died Thi...|\n",
+      "|2017-11-04 14:00:00|                      NEW Roger Ver CEO...|\n",
+      "|2017-11-04 13:00:00|                      Bitcoin prices me...|\n",
+      "|2017-11-02 12:00:00|                      Nice Ethersport a...|\n",
+      "|2017-11-07 23:00:00|                      CME Unveils Bitco...|\n",
+      "|2017-11-04 09:00:00|                      One Bitcoin Trans...|\n",
+      "|2017-11-02 02:00:00|                      This is the first...|\n",
+      "|2017-11-03 03:00:00|                      Coinbase Adds A R...|\n",
+      "|2017-11-04 04:00:00|                      Kyle Bass Intervi...|\n",
+      "|2017-11-05 00:00:00|                      Spec Check out th...|\n",
+      "|2017-10-31 17:00:00|                      Hot crypto altcoi...|\n",
+      "|2017-11-06 16:00:00|                      How to generate u...|\n",
+      "|2017-11-03 05:00:00|                      bitcoin just hit ...|\n",
+      "|2017-11-02 21:00:00|                      Bitcoin Is the Ve...|\n",
+      "|2017-11-06 19:00:00|                      BTCUSD Ribasso Bi...|\n",
+      "|2017-11-02 16:00:00|                      Bitcoin Exchange ...|\n",
+      "|2017-11-01 05:00:00|                      Understanding Seg...|\n",
+      "|2017-10-31 16:00:00|                      Bitcoin Surges Af...|\n",
+      "|2017-10-31 12:00:00|                      CRYPTO BRANDS Bit...|\n",
+      "|2017-11-04 19:00:00|                      Bitcoin 125 Billi...|\n",
+      "+-------------------+------------------------------------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.sql import functions as f\n",
+    "df_with_text = FinalTw.groupby(\"Date_Time\").agg(f.concat_ws(\" \", f.collect_list(FinalTw.Cleaned_Tweets)))\n",
+    "df_with_text.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "236"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "FinalTw_avg.count()"
    ]
   },
   {
@@ -342,20 +456,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_with_text.take(1)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
