join dfs prices,avg sentiment

--- a/BitCoinPred.ipynb
+++ b/BitCoinPred.ipynb
@@ -453,26 +453,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------+--------------------+\n",
+      "|          Date_Time|avg(Sentiment_score)|\n",
+      "+-------------------+--------------------+\n",
+      "|2017-10-31 05:00:00| 0.09226261767339003|\n",
+      "|2017-10-31 06:00:00| 0.10376996608248826|\n",
+      "|2017-10-31 07:00:00| 0.11169094251431187|\n",
+      "|2017-10-31 08:00:00| 0.08213433168664136|\n",
+      "|2017-10-31 09:00:00| 0.08937042968493204|\n",
+      "|2017-10-31 10:00:00| 0.10267176426801841|\n",
+      "|2017-10-31 11:00:00| 0.12814641170317434|\n",
+      "|2017-10-31 12:00:00| 0.10549754665746006|\n",
+      "|2017-10-31 13:00:00| 0.13845789734397101|\n",
+      "|2017-10-31 14:00:00| 0.11779438208175155|\n",
+      "|2017-10-31 15:00:00| 0.09131997304766154|\n",
+      "|2017-10-31 16:00:00| 0.09301943334583278|\n",
+      "|2017-10-31 17:00:00| 0.09206832917391784|\n",
+      "|2017-10-31 18:00:00| 0.10691324426615845|\n",
+      "|2017-10-31 19:00:00| 0.12217075088870974|\n",
+      "|2017-10-31 20:00:00| 0.12817142761147934|\n",
+      "|2017-10-31 21:00:00| 0.09238581351736849|\n",
+      "|2017-10-31 22:00:00| 0.10682700448924513|\n",
+      "|2017-10-31 23:00:00| 0.10207913246967248|\n",
+      "|2017-11-01 00:00:00|  0.1003165565658219|\n",
+      "+-------------------+--------------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "df_with_text.take(1)"
+    "from pyspark.sql.functions import *\n",
+    "df_sort = FinalTw_avg.sort(asc(\"Date_Time\"))\n",
+    "df_sort.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# dates_df.registerTempTable(\"dates\")\n",
-    "# events_df.registerTempTable(\"events\")\n",
-    "# results = sqlContext.sql(\"SELECT * FROM dates INNER JOIN events ON dates.lower_timestamp < events.time and  events.time < dates.upper_timestamp\")\n",
-    "# results.explain()"
+    "df_sort.repartition(1).write.csv(\"Two.csv\") #this will write df to single csv instead of writing diff csv acc to partitions "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------+--------------------+-------------------+-------+\n",
+      "|          Date_Time|avg(Sentiment_score)|          Date_Time|  Price|\n",
+      "+-------------------+--------------------+-------------------+-------+\n",
+      "|2017-10-31 17:00:00| 0.09206832917391784|2017-10-31 17:00:00|6361.79|\n",
+      "|2017-10-31 16:00:00| 0.09301943334583278|2017-10-31 16:00:00|6364.78|\n",
+      "|2017-10-31 12:00:00| 0.10549754665746006|2017-10-31 12:00:00|6201.03|\n",
+      "|2017-10-31 05:00:00| 0.09226261767339003|2017-10-31 05:00:00|6158.76|\n",
+      "|2017-10-31 23:00:00| 0.10207913246967248|2017-10-31 23:00:00|6448.36|\n",
+      "|2017-10-31 19:00:00| 0.12217075088870974|2017-10-31 19:00:00|6341.15|\n",
+      "|2017-10-31 14:00:00| 0.11779438208175155|2017-10-31 14:00:00|6363.13|\n",
+      "|2017-10-31 13:00:00| 0.13845789734397101|2017-10-31 13:00:00|6332.34|\n",
+      "|2017-10-31 09:00:00| 0.08937042968493204|2017-10-31 09:00:00| 6165.0|\n",
+      "|2017-10-31 10:00:00| 0.10267176426801841|2017-10-31 10:00:00|6170.77|\n",
+      "|2017-10-31 06:00:00| 0.10376996608248826|2017-10-31 06:00:00| 6105.9|\n",
+      "|2017-10-31 11:00:00| 0.12814641170317434|2017-10-31 11:00:00|6233.74|\n",
+      "|2017-10-31 18:00:00| 0.10691324426615845|2017-10-31 18:00:00|6335.64|\n",
+      "|2017-10-31 08:00:00| 0.08213433168664136|2017-10-31 08:00:00|6125.13|\n",
+      "|2017-10-31 22:00:00| 0.10682700448924513|2017-10-31 22:00:00|6383.94|\n",
+      "|2017-10-31 15:00:00| 0.09131997304766154|2017-10-31 15:00:00|6365.16|\n",
+      "|2017-10-31 21:00:00| 0.09238581351736849|2017-10-31 21:00:00|6393.26|\n",
+      "|2017-10-31 07:00:00| 0.11169094251431187|2017-10-31 07:00:00|6094.36|\n",
+      "|2017-10-31 20:00:00| 0.12817142761147934|2017-10-31 20:00:00|6370.08|\n",
+      "+-------------------+--------------------+-------------------+-------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "FinalTw_avg.registerTempTable(\"avgs\")\n",
+    "FinalBtc.registerTempTable(\"prices\")\n",
+    "results = sql.sql(\"SELECT * FROM avgs INNER JOIN prices ON avgs.Date_Time = prices.Date_Time\")\n",
+    "results.show(40)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
