Data frames joined

--- a/BitCoinPred.ipynb
+++ b/BitCoinPred.ipynb
@@ -266,42 +266,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+--------------+-------+-------------------+\n",
-      "|      DateTime|  Price|   Cleaned_BTC_Time|\n",
-      "+--------------+-------+-------------------+\n",
-      "| 10/31/17 0:00|6142.46| 2017-10-31 0:00:00|\n",
-      "| 10/31/17 1:00|6139.47| 2017-10-31 1:00:00|\n",
-      "| 10/31/17 2:00| 6128.2| 2017-10-31 2:00:00|\n",
-      "| 10/31/17 3:00|6130.72| 2017-10-31 3:00:00|\n",
-      "| 10/31/17 4:00|6143.92| 2017-10-31 4:00:00|\n",
-      "| 10/31/17 5:00|6158.76| 2017-10-31 5:00:00|\n",
-      "| 10/31/17 6:00| 6105.9| 2017-10-31 6:00:00|\n",
-      "| 10/31/17 7:00|6094.36| 2017-10-31 7:00:00|\n",
-      "| 10/31/17 8:00|6125.13| 2017-10-31 8:00:00|\n",
-      "| 10/31/17 9:00|   6165| 2017-10-31 9:00:00|\n",
-      "|10/31/17 10:00|6170.77|2017-10-31 10:00:00|\n",
-      "|10/31/17 11:00|6233.74|2017-10-31 11:00:00|\n",
-      "|10/31/17 12:00|6201.03|2017-10-31 12:00:00|\n",
-      "|10/31/17 13:00|6332.34|2017-10-31 13:00:00|\n",
-      "|10/31/17 14:00|6363.13|2017-10-31 14:00:00|\n",
-      "|10/31/17 15:00|6365.16|2017-10-31 15:00:00|\n",
-      "|10/31/17 16:00|6364.78|2017-10-31 16:00:00|\n",
-      "|10/31/17 17:00|6361.79|2017-10-31 17:00:00|\n",
-      "|10/31/17 18:00|6335.64|2017-10-31 18:00:00|\n",
-      "|10/31/17 19:00|6341.15|2017-10-31 19:00:00|\n",
-      "|10/31/17 20:00|6370.08|2017-10-31 20:00:00|\n",
-      "|10/31/17 21:00|6393.26|2017-10-31 21:00:00|\n",
-      "|10/31/17 22:00|6383.94|2017-10-31 22:00:00|\n",
-      "|10/31/17 23:00|6448.36|2017-10-31 23:00:00|\n",
-      "|  11/1/17 0:00|6376.49|  2017-11-1 0:00:00|\n",
-      "|  11/1/17 1:00|6405.67|  2017-11-1 1:00:00|\n",
-      "|  11/1/17 2:00| 6419.6|  2017-11-1 2:00:00|\n",
-      "|  11/1/17 3:00|6426.88|  2017-11-1 3:00:00|\n",
-      "|  11/1/17 4:00|6365.63|  2017-11-1 4:00:00|\n",
-      "|  11/1/17 5:00|6399.43|  2017-11-1 5:00:00|\n",
-      "+--------------+-------+-------------------+\n",
-      "only showing top 30 rows\n",
-      "\n",
       "+-------------------+-------+\n",
       "|          Date_Time|  Price|\n",
       "+-------------------+-------+\n",
@@ -310,53 +274,17 @@
       "|2017-10-31 02:00:00| 6128.2|\n",
       "|2017-10-31 03:00:00|6130.72|\n",
       "|2017-10-31 04:00:00|6143.92|\n",
-      "|2017-10-31 05:00:00|6158.76|\n",
-      "|2017-10-31 06:00:00| 6105.9|\n",
-      "|2017-10-31 07:00:00|6094.36|\n",
-      "|2017-10-31 08:00:00|6125.13|\n",
-      "|2017-10-31 09:00:00| 6165.0|\n",
-      "|2017-10-31 10:00:00|6170.77|\n",
-      "|2017-10-31 11:00:00|6233.74|\n",
-      "|2017-10-31 12:00:00|6201.03|\n",
-      "|2017-10-31 13:00:00|6332.34|\n",
-      "|2017-10-31 14:00:00|6363.13|\n",
-      "|2017-10-31 15:00:00|6365.16|\n",
-      "|2017-10-31 16:00:00|6364.78|\n",
-      "|2017-10-31 17:00:00|6361.79|\n",
-      "|2017-10-31 18:00:00|6335.64|\n",
-      "|2017-10-31 19:00:00|6341.15|\n",
-      "|2017-10-31 20:00:00|6370.08|\n",
-      "|2017-10-31 21:00:00|6393.26|\n",
-      "|2017-10-31 22:00:00|6383.94|\n",
-      "|2017-10-31 23:00:00|6448.36|\n",
-      "|2017-11-01 00:00:00|6376.49|\n",
-      "|2017-11-01 01:00:00|6405.67|\n",
-      "|2017-11-01 02:00:00| 6419.6|\n",
-      "|2017-11-01 03:00:00|6426.88|\n",
-      "|2017-11-01 04:00:00|6365.63|\n",
-      "|2017-11-01 05:00:00|6399.43|\n",
-      "|2017-11-01 06:00:00|6400.97|\n",
-      "|2017-11-01 07:00:00| 6392.6|\n",
-      "|2017-11-01 08:00:00|6446.61|\n",
-      "|2017-11-01 09:00:00|6541.77|\n",
-      "|2017-11-01 10:00:00|6584.45|\n",
-      "|2017-11-01 11:00:00| 6568.0|\n",
-      "|2017-11-01 12:00:00|6509.08|\n",
-      "|2017-11-01 13:00:00|6484.66|\n",
-      "|2017-11-01 14:00:00|6547.65|\n",
-      "|2017-11-01 15:00:00|6556.74|\n",
       "+-------------------+-------+\n",
-      "only showing top 40 rows\n",
+      "only showing top 5 rows\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "FullDataBtc.show(30)\n",
     "CleandfBtc = FullDataBtc.withColumn(\"Cleaned_BTC_Time_New\",FullDataBtc['Cleaned_BTC_Time'].cast(TimestampType()))\n",
     "FinalBtc = CleandfBtc.selectExpr(\"Cleaned_BTC_Time_New as Date_Time\", \"Price\")\n",
     "FinalBtc = FinalBtc.withColumn(\"Price\",FinalBtc['Price'].cast(DoubleType()))\n",
-    "FinalBtc.show(40)#In this cell, casting to timesstamp, changing col names and casting price type to double"
+    "FinalBtc.show(5)#In this cell, casting to timesstamp, changing col names and casting price type to double"
    ]
   },
   {
@@ -434,23 +362,8 @@
       "|2017-11-04 13:00:00| 0.1172484553339806|\n",
       "|2017-11-02 12:00:00|0.06527885267149504|\n",
       "|2017-11-07 23:00:00|0.10283782658623176|\n",
-      "|2017-11-04 09:00:00|0.09418897322089734|\n",
-      "|2017-11-02 02:00:00|0.09436981377657502|\n",
-      "|2017-11-03 03:00:00|0.09344412833299827|\n",
-      "|2017-11-04 04:00:00|0.10142201882228671|\n",
-      "|2017-11-05 00:00:00|0.08632902932326081|\n",
-      "|2017-10-31 17:00:00|0.09206832917391784|\n",
-      "|2017-11-06 16:00:00|0.09368665402965974|\n",
-      "|2017-11-03 05:00:00|0.07860593016294816|\n",
-      "|2017-11-02 21:00:00|0.08349927669926008|\n",
-      "|2017-11-06 19:00:00|0.10290178138846101|\n",
-      "|2017-11-02 16:00:00|0.06061797001144715|\n",
-      "|2017-11-01 05:00:00|0.11368575691864594|\n",
-      "|2017-10-31 16:00:00|0.09301943334583278|\n",
-      "|2017-10-31 12:00:00|0.10549754665746006|\n",
-      "|2017-11-04 19:00:00|0.09140639081231433|\n",
       "+-------------------+-------------------+\n",
-      "only showing top 20 rows\n",
+      "only showing top 5 rows\n",
       "\n"
      ]
     }
@@ -460,7 +373,7 @@
     "# FinalTw_avg.show()\n",
     "FinalTw.registerTempTable(\"temp\")\n",
     "FinalTw_avg = sql.sql(\"SELECT Date_Time As DateTime, AVG(Sentiment_score) As Sentiment_score FROM temp GROUP BY Date_Time\")\n",
-    "FinalTw_avg.show()"
+    "FinalTw_avg.show(5)"
    ]
   },
   {
@@ -480,23 +393,8 @@
       "|2017-11-04 13:00:00|                      Bitcoin prices me...|\n",
       "|2017-11-02 12:00:00|                      Nice Ethersport a...|\n",
       "|2017-11-07 23:00:00|                      CME Unveils Bitco...|\n",
-      "|2017-11-04 09:00:00|                      One Bitcoin Trans...|\n",
-      "|2017-11-02 02:00:00|                      This is the first...|\n",
-      "|2017-11-03 03:00:00|                      Coinbase Adds A R...|\n",
-      "|2017-11-04 04:00:00|                      Kyle Bass Intervi...|\n",
-      "|2017-11-05 00:00:00|                      Spec Check out th...|\n",
-      "|2017-10-31 17:00:00|                      Hot crypto altcoi...|\n",
-      "|2017-11-06 16:00:00|                      How to generate u...|\n",
-      "|2017-11-03 05:00:00|                      bitcoin just hit ...|\n",
-      "|2017-11-02 21:00:00|                      Bitcoin Is the Ve...|\n",
-      "|2017-11-06 19:00:00|                      BTCUSD Ribasso Bi...|\n",
-      "|2017-11-02 16:00:00|                      Bitcoin Exchange ...|\n",
-      "|2017-11-01 05:00:00|                      Understanding Seg...|\n",
-      "|2017-10-31 16:00:00|                      Bitcoin Surges Af...|\n",
-      "|2017-10-31 12:00:00|                      CRYPTO BRANDS Bit...|\n",
-      "|2017-11-04 19:00:00|                      Bitcoin 125 Billi...|\n",
       "+-------------------+------------------------------------------+\n",
-      "only showing top 20 rows\n",
+      "only showing top 5 rows\n",
       "\n"
      ]
     }
@@ -504,7 +402,7 @@
    "source": [
     "from pyspark.sql import functions as f\n",
     "df_with_text = FinalTw.groupby(\"Date_Time\").agg(f.concat_ws(\" \", f.collect_list(FinalTw.Cleaned_Tweets)))\n",
-    "df_with_text.show()"
+    "df_with_text.show(5)"
    ]
   },
   {
@@ -531,40 +429,7 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-------------------+-------------------+\n",
-      "|           DateTime|    Sentiment_score|\n",
-      "+-------------------+-------------------+\n",
-      "|2017-10-31 05:00:00|0.09226261767339003|\n",
-      "|2017-10-31 06:00:00|0.10376996608248826|\n",
-      "|2017-10-31 07:00:00|0.11169094251431187|\n",
-      "|2017-10-31 08:00:00|0.08213433168664136|\n",
-      "|2017-10-31 09:00:00|0.08937042968493204|\n",
-      "|2017-10-31 10:00:00|0.10267176426801841|\n",
-      "|2017-10-31 11:00:00|0.12814641170317434|\n",
-      "|2017-10-31 12:00:00|0.10549754665746006|\n",
-      "|2017-10-31 13:00:00|0.13845789734397101|\n",
-      "|2017-10-31 14:00:00|0.11779438208175155|\n",
-      "|2017-10-31 15:00:00|0.09131997304766154|\n",
-      "|2017-10-31 16:00:00|0.09301943334583278|\n",
-      "|2017-10-31 17:00:00|0.09206832917391784|\n",
-      "|2017-10-31 18:00:00|0.10691324426615845|\n",
-      "|2017-10-31 19:00:00|0.12217075088870974|\n",
-      "|2017-10-31 20:00:00|0.12817142761147934|\n",
-      "|2017-10-31 21:00:00|0.09238581351736849|\n",
-      "|2017-10-31 22:00:00|0.10682700448924513|\n",
-      "|2017-10-31 23:00:00|0.10207913246967248|\n",
-      "|2017-11-01 00:00:00| 0.1003165565658219|\n",
-      "+-------------------+-------------------+\n",
-      "only showing top 20 rows\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# from pyspark.sql.functions import *\n",
     "# df_sort = FinalTw_avg.sort(asc(\"Date_Time\"))\n",
@@ -573,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -588,43 +453,8 @@
       "|2017-10-31 07:00:00|0.11169094251431187|2017-10-31 07:00:00|6094.36|\n",
       "|2017-10-31 08:00:00|0.08213433168664136|2017-10-31 08:00:00|6125.13|\n",
       "|2017-10-31 09:00:00|0.08937042968493204|2017-10-31 09:00:00| 6165.0|\n",
-      "|2017-10-31 10:00:00|0.10267176426801841|2017-10-31 10:00:00|6170.77|\n",
-      "|2017-10-31 11:00:00|0.12814641170317434|2017-10-31 11:00:00|6233.74|\n",
-      "|2017-10-31 12:00:00|0.10549754665746006|2017-10-31 12:00:00|6201.03|\n",
-      "|2017-10-31 13:00:00|0.13845789734397101|2017-10-31 13:00:00|6332.34|\n",
-      "|2017-10-31 14:00:00|0.11779438208175155|2017-10-31 14:00:00|6363.13|\n",
-      "|2017-10-31 15:00:00|0.09131997304766154|2017-10-31 15:00:00|6365.16|\n",
-      "|2017-10-31 16:00:00|0.09301943334583278|2017-10-31 16:00:00|6364.78|\n",
-      "|2017-10-31 17:00:00|0.09206832917391784|2017-10-31 17:00:00|6361.79|\n",
-      "|2017-10-31 18:00:00|0.10691324426615845|2017-10-31 18:00:00|6335.64|\n",
-      "|2017-10-31 19:00:00|0.12217075088870974|2017-10-31 19:00:00|6341.15|\n",
-      "|2017-10-31 20:00:00|0.12817142761147934|2017-10-31 20:00:00|6370.08|\n",
-      "|2017-10-31 21:00:00|0.09238581351736849|2017-10-31 21:00:00|6393.26|\n",
-      "|2017-10-31 22:00:00|0.10682700448924513|2017-10-31 22:00:00|6383.94|\n",
-      "|2017-10-31 23:00:00|0.10207913246967248|2017-10-31 23:00:00|6448.36|\n",
-      "|2017-11-01 00:00:00| 0.1003165565658219|2017-11-01 00:00:00|6376.49|\n",
-      "|2017-11-01 01:00:00|0.09925359364187578|2017-11-01 01:00:00|6405.67|\n",
-      "|2017-11-01 02:00:00| 0.0903783471957929|2017-11-01 02:00:00| 6419.6|\n",
-      "|2017-11-01 03:00:00|0.08084288445755294|2017-11-01 03:00:00|6426.88|\n",
-      "|2017-11-01 04:00:00| 0.0952848910172815|2017-11-01 04:00:00|6365.63|\n",
-      "|2017-11-01 05:00:00|0.11368575691864594|2017-11-01 05:00:00|6399.43|\n",
-      "|2017-11-01 06:00:00|0.09042962332897247|2017-11-01 06:00:00|6400.97|\n",
-      "|2017-11-01 07:00:00|0.10544019936526403|2017-11-01 07:00:00| 6392.6|\n",
-      "|2017-11-01 08:00:00|0.10044294823240624|2017-11-01 08:00:00|6446.61|\n",
-      "|2017-11-01 09:00:00|0.08704017784707618|2017-11-01 09:00:00|6541.77|\n",
-      "|2017-11-01 10:00:00|0.09483974379779264|2017-11-01 10:00:00|6584.45|\n",
-      "|2017-11-01 11:00:00|0.11055747954216864|2017-11-01 11:00:00| 6568.0|\n",
-      "|2017-11-01 12:00:00|0.08590353839574041|2017-11-01 12:00:00|6509.08|\n",
-      "|2017-11-01 13:00:00|0.10319565205908404|2017-11-01 13:00:00|6484.66|\n",
-      "|2017-11-01 14:00:00|0.10654713353890957|2017-11-01 14:00:00|6547.65|\n",
-      "|2017-11-01 15:00:00|0.09933015033777949|2017-11-01 15:00:00|6556.74|\n",
-      "|2017-11-01 16:00:00|0.11030915142668184|2017-11-01 16:00:00|6587.46|\n",
-      "|2017-11-01 17:00:00|0.09998502082288237|2017-11-01 17:00:00|6604.57|\n",
-      "|2017-11-01 18:00:00|0.11224797952609222|2017-11-01 18:00:00|6585.55|\n",
-      "|2017-11-01 19:00:00|0.08886486497870702|2017-11-01 19:00:00|6615.47|\n",
-      "|2017-11-01 20:00:00|0.08552363872418746|2017-11-01 20:00:00|6568.12|\n",
       "+-------------------+-------------------+-------------------+-------+\n",
-      "only showing top 40 rows\n",
+      "only showing top 5 rows\n",
       "\n"
      ]
     }
@@ -633,7 +463,27 @@
     "FinalTw_avg.registerTempTable(\"avgs\")\n",
     "FinalBtc.registerTempTable(\"prices\")\n",
     "results = sql.sql(\"SELECT * FROM avgs JOIN prices ON avgs.DateTime = prices.Date_Time order by avgs.DateTime\")\n",
-    "results.show(40)"
+    "results.show(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "211"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results.count()"
    ]
   },
   {
@@ -642,16 +492,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results.count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results.repartition(1).write.csv(\"Six.csv\") #this will write df to single csv instead of writing diff csv acc to partitions "
+    "results.repartition(1).write.csv(\"One.csv\") #this will write df to single csv instead of writing diff csv acc to partitions "
    ]
   },
   {
