Cleaned up comments and text

--- a/BitCoinPred.ipynb
+++ b/BitCoinPred.ipynb
@@ -350,12 +350,12 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "FinalTw_avg = FinalTw.select(\"Date_Time\",\"Sentiment_score\").groupBy(\"Date_Time\").agg(avg(col(\"Sentiment_score\")))\n",
-    "# FinalTw_avg.show()\n",
-    "# FinalTw_avg.printSchema()\n",
     "FinalTw_avg = FinalTw_avg.selectExpr(\"Date_Time as date\", \"`avg(Sentiment_score)` as score\")\n"
    ]
   },
@@ -376,22 +376,22 @@
     }
    ],
    "source": [
-    "FinalTw_avg.printSchema()\n",
-    "\n",
-    "# FinalTw.registerTempTable(\"temp\")\n",
-    "# FinalTw_avg = sql.sql(\"SELECT Date_Time As DateTime, AVG(Sentiment_score) As Sentiment_score FROM temp GROUP BY Date_Time\")\n",
-    "# FinalTw_avg.show(5)\n"
+    "FinalTw_avg.printSchema()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# from pyspark.sql import functions as f\n",
     "# df_with_text = FinalTw.groupby(\"Date_Time\").agg(f.concat_ws(\" \", f.collect_list(FinalTw.Cleaned_Tweets)))\n",
-    "# df_with_text.show(5)"
+    "# df_with_text.show(5)\n",
+    "\n",
+    "#Concat the text together for the next round of sentiment analysis"
    ]
   },
   {
@@ -453,18 +453,10 @@
     }
    ],
    "source": [
-    "# from pyspark.sql.functions import *\n",
-    "# df_sort = FinalTw_avg.sort(asc(\"Date_Time\"))\n",
-    "# df_sort.show()\n",
-    "\n",
-    "# temp1 = FinalTw_avg.alias('temp1')\n",
-    "# temp2 = FinalBtc.alias('temp2')\n",
-    "# FinalTwTemp = FinalTw_avg.limit(10)\n",
-    "\n",
     "FinalTw_avg = FinalTw_avg.join(FinalBtc, FinalTw_avg.date == FinalBtc.Date_Time)\n",
     "FinalTw_avg = FinalTw_avg.selectExpr('Date_Time', 'score as Sentiment_score', 'Price').sort(asc(\"Date_Time\"))\n",
     "\n",
-    "FinalTw_avg.show()"
+    "# FinalTw_avg.show()"
    ]
   },
   {
@@ -506,14 +498,6 @@
     }
    ],
    "source": [
-    "# FinalTw_avg.registerTempTable(\"avgs\")\n",
-    "# FinalBtc.registerTempTable(\"prices\")\n",
-    "# results = sql.sql(\"SELECT * FROM avgs JOIN prices ON avgs.DateTime = prices.Date_Time order by avgs.DateTime\")\n",
-    "# results.show(5)\n",
-    "\n",
-    "# from pyspark.sql.functions import *\n",
-    "\n",
-    "\n",
     "FinalTw_avg = FinalTw_avg.sort(asc(\"Date_Time\"))\n",
     "\n",
     "FinalTw_avg.show()"
@@ -521,20 +505,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# results.count()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 60,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "FinalTw_avg.repartition(1).write.csv(\"One1.csv\") #this will write df to single csv instead of writing diff csv acc to partitions "
+    "FinalTw_avg.repartition(1).write.csv(\"Two.csv\") #this will write df to single csv instead of writing diff csv acc to partitions "
    ]
   },
   {
